--- a/package.json
+++ b/package.json
@@ -1,10 +1,9 @@
 {
   "name": "spiderbite",
-  "version": "1.0.0",
+  "version": "1.0.2",
   "main": "index.js",
   "scripts": {
-    "test": "standard && node test.js",
-    "publish": "npm run test"
+    "test": "standard && node test.js"
   },
   "devDependencies": {
     "tap": "^1.3.2",
