--- a/package.json
+++ b/package.json
@@ -3,11 +3,13 @@
   "version": "1.0.5",
   "main": "index.js",
   "scripts": {
-    "test": "standard && node test.js"
+    "test": "standard && node test.js",
+    "buildDemo": "browserify demo.js -d -o demo/bundle.js"
   },
   "devDependencies": {
-    "tap": "^1.3.2",
-    "standard": "4.5.4"
+    "pie-ano": "^1.1.1",
+    "standard": "4.5.4",
+    "tap": "^1.3.2"
   },
   "license": "MIT",
   "description": "WIP sequencer module",
